tests/snapshots/tests__arg__global.snap
---
source: tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap__subcommand='do-stuff'
claptrap_verb='true'
