tests/snapshots/tests__arg__group.snap
---
source: tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap_debug='true'
claptrap_verbose='false'
