tests/snapshots/tests__arg__help_heading.snap
---
source: tests/tests.rs
expression: "super::run(spec, args)"
---
command cat <<'EOF_d25a9760'
[1m[4mUsage:[0m [1mprog[0m [OPTIONS]

[1m[4mOptions:[0m
  [1m-h[0m, [1m--help[0m  Print help

[1m[4mConfiguration Options:[0m
      [1m--config[0m <cfg>  Some help text describing the --config arg
EOF_d25a9760
exit 0
